syntax = "proto3";

package pb;

option go_package = "github.com/ApesJs/bank-app/pb";

message CreateTransferRequest {
  int64 from_account_id = 1;
  int64 to_account_id = 2;
  int64 amount = 3;
}

message CreateTransferResponse{
  string status = 1;
  int64 transaction_id = 2;
  string message = 3;
}

message CreateTransferErrorResponse{
  string status = 1;
  string message = 2;
}