syntax = "proto3";

package pb;

import "entry.proto";

option go_package = "github.com/ApesJs/bank-app/pb";

message GetEntryRequest {
  int64 account_id = 1;
  int32 page_id = 2;
  int32 page_size = 3;
}

message GetEntryResponse{
  int64 account_id = 1;
  repeated TransactionResponse transactions = 2;
}

message GetEntryErrorResponse{
  string error = 1;
}

message TransactionResponse {
  int64 transaction_id = 1;
  string date = 2;
  int64 amount = 3;
  string type = 4;
}